Fix Ads alignment

--- a/app/styles/layout/_ad.scss
+++ b/app/styles/layout/_ad.scss
@@ -4,12 +4,14 @@
 }
 
 .os-ad-top{
+  text-align: center;
   position: relative;
   padding: 0px 70px;
 /*  margin-top: -8px;*/
 /*  margin-bottom: 16px;*/
 }
 .os-ad-bottom{
+  text-align: center;
   padding: 0px 60px;
 }
 
